src/objects/Karma_Exchange_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Auto_Sync_Job_Id__c</fullName>
        <label>Auto Sync Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables automatically syncing volunteer job info with Karma Exchange.</description>
        <label>Auto Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Shift_Contact__c</fullName>
        <description>Default contact for all volunteer shifts that don&apos;t otherwise have a contact associated with them.</description>
        <label>Default Shift Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karma_Exchange_Organization_Id__c</fullName>
        <description>The Karma Exchange id for the listing / root organization.</description>
        <label>Karma Exchange Organization Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karma_Exchange_Secret_Key__c</fullName>
        <description>The Karma Exchange secret key for the listing / root organization.</description>
        <label>Karma Exchange Secret Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Karma_Exchange_Server_Url__c</fullName>
        <description>The Karma Exchange backend server url.</description>
        <label>Karma Exchange Server Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>The account id for the listing / root volunteer organization.</description>
        <label>Organization</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Karma Exchange Settings</label>
</CustomObject>